tests/transpiler/x/hs/two-sum.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:07 GMT+7
twoSum nums target = do
    n = length nums
    mapM_ (\i -> do
        mapM_ (\j -> do
        if (nums !! i) + (nums !! j) == target then do
        return ([i, j])

        ) [i + 1 .. (n - 1)]
        ) [0 .. (n - 1)]
    return ([-1, -1])


result = twoSum [2, 7, 11, 15] 9

main :: IO ()
main = do
    print ((result !! 0))
    print ((result !! 1))
